# WhiteBoxML

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFIESTO.md  README.md  pyproject.toml
.github/workflows/: ci.yml
WhiteBoxML/: utils.py
WhiteBoxML/metricas/: __init__.py
WhiteBoxML/metricas/clasificacion/: __init__.py  clasificacion.py
WhiteBoxML/metricas/regresion/: __init__.py  regresion.py
scripts/: check_docstrings.py
tests/: test_metrics.py  test_utils.py
whiteboxml/: __init__.py  utils.py
whiteboxml/metricas/: __init__.py
whiteboxml/metricas/clasificacion/: __init__.py  clasificacion.py
whiteboxml/metricas/regresion/: __init__.py  regresion.py
